Avoid Integer instantiations (new Integer).
Change-Id: I8ec0e2d5f4a38952d7cf9a4abce0e9161bbd7174
Signed-off-by: Rajesh_Sindagi <Rajesh_Sindagi@dell.com>
(cherry picked from commit 03d91764c4f17144a79b395794c02acd2e4358da)